[FIX] On mobile phones - change header from fixed to relative

--- a/app/assets/stylesheets/responsive.sass
+++ b/app/assets/stylesheets/responsive.sass
@@ -26,10 +26,8 @@
 
   .not_desktop
     header
-      position: fixed
+      position: relative
       z-index: 1000
-    .infinite-scroll-box
-      padding-top: 50px
     #frame_index
       left: 0px
 
